responsive align, search bar and not found responsive fixed

--- a/client/src/styles/cards.module.css
+++ b/client/src/styles/cards.module.css
@@ -33,9 +33,11 @@
     
 }
 
-.pikachu{
-
-    
+.pikachuSad{
+    border-radius: 50%;
+    border: 1px solid white;
+    border-color: white;
+ 
 }
 .notFoundContainer{
     width: 100%;
@@ -44,8 +46,7 @@
     justify-content: center;
     align-items: center;
     overflow-x: hidden;
-    overflow-x: hidden;
-    
+    overflow-x: hidden;  
 }
 .notFound{
     width: 600px;
@@ -143,5 +144,29 @@ left: 0;
 @media screen and (max-width:700px){
     .main{
         display: flex;
+        flex-direction: column;
+        
+    }
+    .pikachuSad{
+        border-radius: 50%;
+        border: 1px solid white;
+        border-color: white;
+     
+    }
+    .notFoundContainer{
+        font-size: 14px;
+        
+    }
+}
+
+@media screen and (max-width:440px){
+   
+    .notFoundContainer h3{
+        display: none;
+        
+    }
+    .notFoundContainer img{
+       max-width: 160px;
+        
     }
 }
